src/objects/Issue__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Result__c</fullName>
        <label>Actual Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dev_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dev Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues_DevOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expected_Result__c</fullName>
        <label>Expected Result</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Completion_Date__c</fullName>
        <label>Issue Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Issue_Name__c</fullName>
        <label>Issue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issue Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Severity__c</fullName>
        <label>Issue Severity</label>
        <picklist>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Status__c</fullName>
        <label>Issue Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ReOpened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Steps_To_Reproduce__c</fullName>
        <label>Steps To Reproduce</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Story</label>
        <referenceTo>Story__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Issue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Story__c</columns>
        <columns>Actual_Result__c</columns>
        <columns>Expected_Result__c</columns>
        <columns>Issue_Completion_Date__c</columns>
        <columns>Issue_Owner__c</columns>
        <columns>Issue_Severity__c</columns>
        <columns>Issue_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Steps_To_Reproduce__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Issue</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>